# Coda

./: .Makefile.coq.d  .Makefile.d  .gitignore  .gitmodules  CoqMakefile.conf  DSL.md  LICENSE-MIT  Makefile  Makefile.conf  Makefile.coq  Makefile.coq.conf  README.md  _CoqProject
BigInt/: Makefile  Makefile.coq  Makefile.coq.conf  _CoqProject
BigInt/src/: .ConfigAudit  Circom.v  DSL.v  Default.v  ListUtil.v  Repr.v  ReprZ.v  Signed.v  Simplify.v
DSL/: Array.v  DSL.v
DSL/lang/: Makefile  (+1 more)
dsl/: .gitignore  .ocamlformat  Makefile
dsl/circuits/: bigadd.ml  bigiszero.ml  biglessthan.ml  bitify.ml  cdsl.ml  comparators.ml  dune  gates.ml  modsub.ml  modsumthree.ml  mul.ml  multiplexer.ml  semaphore.ml  split.ml  sub.ml  sum.ml  trivial.ml
dsl/circuits/bigint/: big_add.ml  big_is_equal.ml  big_is_zero.ml  big_less_than.ml  big_mod.ml  big_mult.ml  big_sub.ml  dune  split.ml
dsl/circuits/circom_rln/: dune  rln_diff.ml  rln_same.ml  utils.ml  withdraw.ml
dsl/circuits/circomlib/: binsum.ml  bitify.ml  comparators.ml  dune  gates.ml  gates.ml.txt  mimcsponge.ml  multiand.ml  multiplexer.ml  mux1.ml  mux3.ml  poseidon.ml  sign.ml  switcher.ml  xor.ml
dsl/circuits/darkforest/: darkforest.ml  dune
dsl/circuits/ed25519/: dune  ed25519.ml
dsl/circuits/ed25519_buggy/: dune  ed25519_buggy.ml
dsl/circuits/hydra/: dune  hydra.ml
dsl/circuits/hydra_auto/: dune  hydra_auto.ml  hydra_auto.ml.gen
dsl/circuits/rln_auto/: rln_auto.ml.gen
dsl/circuits/semaphore/: dune  semaphore.ml  semaphore_new.ml
dsl/circuits/semaphore_new/: dune  semaphore_new.ml  semaphore_new.ml.gen  semaphore_new.ml.txt  semaphore_new_1.ml.txt  semaphore_new_2.ml.txt
dsl/circuits/semaphore_new/semaphore_ll/: semaphore.json
dsl/circuits/unirep/: bigComparators.ml  coreCircuits.ml  dune  epochKey.ml  epochKeyLite.ml  identity.ml  incrementalMerkleTree.ml  leafHasher.ml  preventDoubleAction.ml  proveReputation.ml  signUp.ml  userStateTransition.ml
dsl/circuits/unirep_auto/: dune  userStateTransition_auto.ml  userStateTransition_auto.ml.gen
dsl/circuits/zk_ml/: dune  zk_ml.ml
dsl/circuits/zk_sbt/: dune  zk_sbt.ml
dsl/circuits/zk_sql/: dune  zk_sql.ml
dsl/src/: ast.ml  ast_utils.ml  codegen.ml  coqgen.ml  dsl.ml  dune  hoare_circuit.ml  liblam.ml  monad.ml  monads.ml  nice_dsl.ml  notation.ml  r1cs_utils.ml  typecheck.ml  utils.ml
dsl/test/: dune  test.ml  test_ast_utils.ml  test_bigint.ml  test_bitify.ml  test_circom_rln.ml  test_circomlib.ml  test_circuits.ml  test_codegen.ml  test_comparators.ml  test_coqgen.ml  test_darkforest.ml  test_ed25519.ml  test_ed25519_buggy.ml  test_gates.ml  test_hydra.ml  test_liblam.ml  test_monad.ml  test_multiand.ml  test_semaphore.ml  test_semaphore_new.ml  test_trivial.ml  test_unirep.ml  test_unirep_auto.ml  test_zk_ml.ml  test_zk_sbt.ml  test_zk_sql.ml  utils.ml
dsl/test/bigint/: dune  test_big_add.ml  test_big_less_than.ml  test_big_mult.ml  test_big_sub.ml  test_split.ml
dsl/test/circomlib/: dune  test_bitify.ml  test_comparators.ml  test_gates.ml  test_mux1.ml
dsl/test/codegen_results/: And.r1cs  BigAdd.r1cs  BigAddModP.r1cs  BigIsEqual.r1cs  BigIsZero.r1cs  BigSub.r1cs  Bits2Num.r1cs  CalculateTotal.r1cs  GreaterEqThan.r1cs  GreaterThan.r1cs  IN.r1cs  IsEqual.r1cs  IsNegative.r1cs  IsNotZero.r1cs  IsPositive.r1cs  IsZero.r1cs  LessEqThan.r1cs  LessThan.r1cs  ModProd.r1cs  ModSubThree.r1cs  ModSumThree.r1cs  MultiMux1.r1cs  Nand.r1cs  Not.r1cs  Num2Bits.r1cs  Or.r1cs  Poly.r1cs  PositionSwitcher.r1cs  Query.r1cs  Split.r1cs  SplitThree.r1cs  SumEquals.r1cs  Xor.r1cs  cutId.r1cs  cutState.r1cs  getValueByIndex.r1cs
dsl/test/codegen_results/bigint/: BigAdd.json  BigAdd.r1cs  BigAdd.zkif  BigAddModP.json  BigAddModP.r1cs  BigAddModP.zkif  BigIsEqual.json  BigIsEqual.r1cs  BigIsEqual.txt  BigIsEqual.zkif  BigIsZero.json  BigIsZero.r1cs  BigIsZero.zkif  BigLessThan.json  BigLessThan.r1cs  BigLessThan.zkif  BigSub.json  BigSub.r1cs  BigSub.zkif  BigSubModP.json  BigSubModP.r1cs  BigSubModP.zkif  ModProd.json  ModProd.r1cs  ModProd.zkif  ModSubThree.json  ModSubThree.r1cs  ModSubThree.zkif  ModSumThree.json  ModSumThree.r1cs  ModSumThree.zkif  Split.json  Split.r1cs  Split.zkif  SplitThree.json  SplitThree.r1cs  SplitThree.zkif
dsl/test/codegen_results/circomlib/: And.json  And.r1cs  And.zkif  Bits2Num.json  Bits2Num.r1cs  Bits2Num.zkif  EscalarProduct.json  EscalarProduct.r1cs  EscalarProduct.zkif  GreaterEqThan.json  GreaterEqThan.r1cs  GreaterEqThan.zkif  GreaterThan.json  GreaterThan.r1cs  GreaterThan.zkif  IsEqual.json  IsEqual.r1cs  IsEqual.zkif  IsZero.json  IsZero.r1cs  IsZero.zkif  LessEqThan.r1cs  LessThan.r1cs  MultiMux1.json  MultiMux1.r1cs  MultiMux1.zkif  Nand.json  Nand.r1cs  Nand.zkif  Nor.json  Nor.r1cs  Nor.zkif  Not.json  Not.r1cs  Not.zkif  Num2Bits.json  Num2Bits.r1cs  Num2Bits.zkif  Or.json  Or.r1cs  (+7 more)
dsl/test/codegen_results/darkforest/: CalculateTotal.r1cs  CalculateTotal.zkif  IsNegative.r1cs  QuinSelector.json  QuinSelector.r1cs  QuinSelector.zkif  RangeProof.json  RangeProof.r1cs  RangeProof.zkif
dsl/test/codegen_results/ed25519_circom/: LessThanBounded.json  LessThanBounded.r1cs  LessThanBounded.zkif  LessThanPower.json  LessThanPower.r1cs  LessThanPower.zkif
dsl/test/codegen_results/hydra/: PositionSwitcher.json  PositionSwitcher.r1cs  PositionSwitcher.zkif
dsl/test/codegen_results/zk_ml/: IsNegative.r1cs  IsPositive.r1cs  Max.json  Max.r1cs  Max.zkif  Poly.json  Poly.r1cs  Poly.zkif  ReLU.r1cs
dsl/test/codegen_results/zk_sbt/: IN.json  IN.r1cs  IN.zkif  Query.r1cs  cutId.json  cutId.r1cs  cutId.zkif  cutState.json  cutState.r1cs  cutState.zkif  getValueByIndex.r1cs
dsl/test/codegen_results/zk_sql/: CalculateTotal.json  CalculateTotal.r1cs  IsFiltered.json  IsFiltered.r1cs  IsFiltered.zkif  IsNotZero.json  IsNotZero.r1cs  IsNotZero.zkif  SumEquals.json  SumEquals.r1cs  SumEquals.zkif
fiat-crypto/: Makefile.conf  _CoqProject
src/: BabyJubjub.v  CTuple.v  Circom.v  DSL.v  Default.v  Demo.v  LibOverflow.v  LibTactics.v  ListUtil.v  PigeonHole.v  Repr.v  ReprZ.v  Signed.v  Simplify.v  Tuple.v  Util.v  test.v
(+157 files in other folders)
