(library
 (name bitify)
 (libraries lib)
 (modules bitify))

(library
 (name comparators)
 (libraries lib)
 (modules comparators))

(library
 (name trivial)
 (libraries lib)
 (modules trivial))

; (library
;  (name gates)
;  (libraries comparators)
;  (modules gates))

; (library
;  (name circomlib)
;  (libraries cdsl bitify comparators gates)
;  (modules))

; (library
;  (name biglessthan)
;  (modules biglessthan))

; (library
;  (name bigint)
;  (libraries biglessthan)
;  (modules))

; (library
;  (name sum)
;  (libraries biglessthan bitify)
;  (modules sum))

; (library
;  (name sub)
;  (libraries comparators)
;  (modules sub))

; (library
;  (name split)
;  (libraries bitify)
;  (modules split))

; (library
;  (name mul)
;  (libraries bitify)
;  (modules mul))

; (library
;  (name multiplexer)
;  (modules multiplexer))

; (library
;  (name semaphore)
;  (libraries lib typecheck)
;  (modules semaphore))
