(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (name test_monad)
 ;  (public_name test_state)
 (libraries core lib)
 (modules test_monad))

(executable
 (name test_trivial)
 (libraries zarith lib typecheck trivial)
 (modules test_trivial))

(executable
 (name test_codegen)
 (libraries zarith lib codegen circomlib trivial bigint)
 (modules test_codegen))

(executable
 (name test_ast_utils)
 (libraries zarith lib codegen)
 (modules test_ast_utils))

(executable
 (name test_gates)
 (libraries zarith lib coqgen circomlib)
 (modules test_gates))

(executable
 (name test_coqgen)
 (libraries zarith lib coqgen)
 (modules test_coqgen))

(executable
 (name test_zk_ml)
 (libraries zarith lib coqgen circomlib zk_ml)
 (modules test_zk_ml))

(executable
 (name test_zk_sql)
 (libraries zarith lib coqgen circomlib zk_sql)
 (modules test_zk_sql))
