(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name test_utils)
 (libraries lib typecheck coqgen)
 (modules utils))

(executable
 (name test_monad)
 ;  (public_name test_state)
 (libraries core lib)
 (modules test_monad))

(executable
 (name test_trivial)
 (libraries zarith lib typecheck trivial)
 (modules test_trivial))

(executable
 (name test_codegen)
 (libraries
  zarith
  lib
  codegen
  circomlib
  trivial
  bigint
  semaphore
  hydra
  darkforest
  zk_sbt
  zk_sql
  zk_ml)
 (modules test_codegen))

(executable
 (name test_ast_utils)
 (libraries zarith lib codegen)
 (modules test_ast_utils))

(executable
 (name test_coqgen)
 (libraries zarith lib coqgen)
 (modules test_coqgen))

(executable
 (name test_zk_ml)
 (libraries zarith lib coqgen circomlib test_utils zk_ml)
 (modules test_zk_ml))

(executable
 (name test_zk_sql)
 (libraries zarith lib coqgen circomlib test_utils zk_sql)
 (modules test_zk_sql))

(executable
 (name test_zk_sbt)
 (libraries zarith lib coqgen circomlib test_utils zk_sbt)
 (modules test_zk_sbt))

(executable
 (name test_darkforest)
 (libraries zarith lib coqgen circomlib test_utils darkforest)
 (modules test_darkforest))
