(env
 (dev
  (flags
   (:standard -warn-error -A))))

(library
 (name test_utils)
 (libraries lib typecheck coqgen)
 (modules utils))

(executable
 (name test_monad)
 ;  (public_name test_state)
 (libraries core lib)
 (modules test_monad))

(executable
 (name test_trivial)
 (libraries zarith lib typecheck trivial)
 (modules test_trivial))

(executable
 (name test_codegen)
 (libraries
  zarith
  lib
  codegen
  circomlib
  trivial
  bigint
  semaphore
  hydra
  darkforest
  zk_sbt
  zk_sql
  zk_ml
  ed25519)
 (modules test_codegen))

(executable
 (name test_ast_utils)
 (libraries zarith lib codegen)
 (modules test_ast_utils))

(executable
 (name test_coqgen)
 (libraries zarith lib coqgen)
 (modules test_coqgen))

(executable
 (name test_liblam)
 (libraries zarith lib typecheck liblam test_utils)
 (modules test_liblam))

(executable
 (name test_circomlib)
 (libraries zarith lib coqgen test_utils circomlib)
 (modules test_circomlib))

(executable
 (name test_multiand)
 (libraries zarith lib coqgen test_utils circomlib)
 (modules test_multiand))

(executable
 (name test_bigint)
 (libraries zarith lib coqgen circomlib test_utils bigint)
 (modules test_bigint))

(executable
 (name test_zk_ml)
 (libraries zarith lib coqgen circomlib test_utils zk_ml)
 (modules test_zk_ml))

(executable
 (name test_zk_sql)
 (libraries zarith lib coqgen circomlib test_utils zk_sql)
 (modules test_zk_sql))

(executable
 (name test_zk_sbt)
 (libraries zarith lib coqgen circomlib test_utils zk_sbt)
 (modules test_zk_sbt))

(executable
 (name test_darkforest)
 (libraries zarith lib coqgen circomlib test_utils darkforest)
 (modules test_darkforest))

(executable
 (name test_hydra)
 (libraries zarith lib coqgen circomlib test_utils hydra)
 (modules test_hydra))

(executable
 (name test_semaphore)
 (libraries zarith lib coqgen circomlib test_utils semaphore)
 (modules test_semaphore))

(executable
 (name test_ed25519)
 (libraries zarith lib coqgen circomlib test_utils ed25519)
 (modules test_ed25519))

(executable
 (name test_ed25519_buggy)
 (libraries zarith lib coqgen circomlib test_utils ed25519_buggy)
 (modules test_ed25519_buggy))

(executable
 (name test_unirep)
 (libraries zarith lib coqgen circomlib test_utils unirep)
 (modules test_unirep))

(executable
 (name test_circom_rln)
 (libraries zarith lib coqgen circomlib test_utils circom_rln)
 (modules test_circom_rln))
