; (library
;  (name bitify)
;  (libraries lib liblam)
;  (modules bitify))

; (library
;  (name comparators)
;  (libraries lib)
;  (modules comparators))

; (library
;  (name gates)
;  (libraries lib)
;  (modules gates))

; (library
;  (name multiplexer)
;  (libraries lib)
;  (modules multiplexer))

(library
 (name circomlib)
 (libraries lib liblam)
 (modules bitify comparators gates multiplexer)
 ; (modules)
 )
