(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (name test_big_less_than)
 (libraries zarith lib coqgen circomlib test_utils bigint)
 (modules test_big_less_than))


(executable
 (name test_big_add)
 (libraries zarith lib coqgen circomlib test_utils bigint)
 (modules test_big_add))

(executable
 (name test_big_sub)
 (libraries zarith lib coqgen circomlib test_utils bigint)
 (modules test_big_sub))
